fix layout issues with tab sidebar

--- a/app/assets/stylesheets/modules/tab.css.scss
+++ b/app/assets/stylesheets/modules/tab.css.scss
@@ -38,6 +38,8 @@ article.tabbed
 		height: 100%;
 		position: absolute;
 		overflow: hidden;
+		margin: 0;
+		padding: 0;
 		
 		section
 		{
